# wie

./: .gitmodules  Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: errors.rs  lib.rs  stream.rs
crates/common/src/stream/: mock.rs
crates/common/src/utils/: cstr.rs  env.rs  mod.rs
crates/driver-common-vulkan/: Cargo.toml
crates/driver-common-vulkan/src/: generated.rs  lib.rs
crates/driver-listener-vulkan/: Cargo.toml  README.md
crates/driver-listener-vulkan/src/: entry.rs  generated.rs  lib.rs
crates/driver-listener-vulkan/src/overrided_commands/: debug.rs  debug_utils_messenger_ext.rs  instance.rs  mod.rs
crates/driver-listener-vulkan/src/utils/: instance.rs
crates/driver-vulkan/: Cargo.toml  build.rs  driver.def  driver.reg  install_windows.bat  install_windows_release.bat  vk_wie_icd.json
crates/driver-vulkan/src/: entry.rs  generated.rs  lib.rs  transport_handlers.rs
crates/transport/: Cargo.toml
crates/transport-guest/: Cargo.toml
crates/transport-guest/src/: lib.rs  main.rs
crates/transport-host/: Cargo.toml
crates/transport-host/src/: lib.rs
crates/transport-vsock/: Cargo.toml
crates/transport-vsock/src/: errors.rs  lib.rs  unix.rs  windows.rs
crates/transport/src/: lib.rs  packet.rs  unsafe_receiver.rs
crates/wie/: Cargo.toml
crates/wie/src/: main.rs
generators/driver-vulkan-generator/: Cargo.toml
generators/driver-vulkan-generator/src/: driver.rs  enums.rs  function_address_table.rs  function_data.rs  listener.rs  main.rs  p_next.rs  pfn_functions.rs  transport.rs  vulkan_bitmasks.rs  vulkan_types.rs
generators/driver-vulkan-generator/src/utils/: str.rs
