[workspace]
members = ["crates/*", "generators/*"]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-panic = "0.1.2"
tracy-client = "0.17.0"
profiling = "1.0.15"
windows = "0.56.0"
libc = "0.2.155"
vk-parse = "0.12.0"
ash = "0.38.0"
itertools = "0.13.0"
lockfree = "0.5.1"
rsevents = "0.3.1"
rayon = "1.10.0"

wie.path = "crates/wie"
wie-common.path = "crates/common"
wie-transport.path = "crates/transport"
wie-transport-vsock.path = "crates/transport-vsock"
wie-transport-guest.path = "crates/transport-guest"
wie-transport-host.path = "crates/transport-host"

rstest = "0.20.0"
