[workspace]
members = ["crates/*", "generators/*"]
resolver = "2"

[workspace.dependencies]
log = { version = "0.4.21", features = ["release_max_level_info"] }
simple_logger = "5.0.0"
tracy-client = "0.17.0"
thiserror = "1.0.61"
profiling = "1.0.15"
windows = "0.56.0"
libc = "0.2.155"
vk-parse = "0.12.0"
vkxml = "0.3.1"
quote = "1.0.36"
proc-macro2 = "1.0.86"
ash = "0.38.0"
itertools = "0.13.0"
lockfree = "0.5.1"
rsevents = "0.3.1"
rayon = "1.10.0"
cdump = { git = "https://github.com/Vixenka/cdump.git", rev = "f0f18b5dfeb48e8c07594143a6b9017ae5377699", features = [
    "cdebug",
] }
aligned-vec = "0.6.1"

wie.path = "crates/wie"
wie-common.path = "crates/common"
wie-transport.path = "crates/transport"
wie-transport-vsock.path = "crates/transport-vsock"
wie-transport-guest.path = "crates/transport-guest"
wie-driver-common-vulkan.path = "crates/driver-common-vulkan"
wie-driver-listener-vulkan.path = "crates/driver-listener-vulkan"

rstest = "0.20.0"
