[package]
name = "wie-transport-vsock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wie-common.workspace = true
thiserror.workspace = true
libc.workspace = true
windows = { workspace = true, features = [
    "Win32_Networking_WinSock",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
] }
