[package]
name = "wie-transport"
version = "0.1.0"
edition = "2021"

[features]
profile = ["profiling/profile-with-tracy", "tracy-client/enable"]

[dependencies]
lockfree.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-panic.workspace = true
tracy-client.workspace = true
profiling.workspace = true
rsevents.workspace = true
rayon.workspace = true
wie-common.workspace = true
wie-transport-vsock.workspace = true

[dev-dependencies]
rstest.workspace = true
